fixing issues from FindBugs Report (Maven generated site) - Comparators Serializable - getters/setters of mutable objects fixed to not expose reference to fields (clone()) - removed Constructors for autoboxing types (performance) - some other issues (code conventions, ...)